@startuml

set namespaceSeparator ::

hide empty members
allow_mixing
'left to right direction
skinparam linetype ortho


namespace  sql {

namespace entities {

class Size
enum Type {
	int_1
	int_2
	int_4
	int_8
	char
	fix_size_char
	var_size_char
	blob
	small_real
	long_real
	date
	date_time
}
class Name


class Column

class Value {
	isUserInput: bool
	value : string
}

class PrimaryKeyColumn
class ForeignKeyColumn
class AttributeColumn

class Table {
	name : Name
}

class Database
class Server
class Host
class Hosts

class PrimaryKey
class ForeignKey

Hosts *-- "*" Host
Host *--o "*" Server
Server *--o "*" Database
Database *--o "*" Table


PrimaryKey *--o "*" PrimaryKeyColumn
ForeignKey "1" *--o "*" ForeignKeyColumn
PrimaryKey o--o "*" ForeignKeyColumn

Table *--o "0..1" PrimaryKey
Table  *--o "*" ForeignKey
Table *--o "*" AttributeColumn


Column *-- Type
Column +-- Type
Column *-- Size
Column *-- Name
Column *-- "*" Value

Column <|-- PrimaryKeyColumn
Column <|-- ForeignKeyColumn
Column <|-- AttributeColumn

ForeignKeyColumn o-- PrimaryKeyColumn

' ##########################
ValuesGenerators *-- "*" ValueGenerator 
ValueGenerator <|-- ForeignKeyValueGenerator
ValueGenerator <|-- PrimaryKeyValueGenerator
ValueGenerator <|-- AttributeValueGenerator

ForeignKey o-- ForeignKeyValueGenerator
PrimaryKeyColumn o-- PrimaryKeyValueGenerator
AttributeColumn o-- AttributeValueGenerator

ForeignKeyValueGenerator <|-- OnePkForAllFk
ForeignKeyValueGenerator <|-- NPkForMlFk

PrimaryKeyValueGenerator <|-- SequentialValueGenerator
AttributeValueGenerator <|-- SequentialValueGenerator
AttributeValueGenerator <|-- NullValueGenerator



}

namespace business {



}
}

@enduml